<resources>
    <string name="app_name">Umpire Buddy 2.0</string>
    <string name="balls_button">BALLS</string>
    <string name="balls_counter">0</string>
    <string name="strikes_button">STRIKES</string>
    <string name="strikes_counter">0</string>
    <string name="reset_button">RESET</string>
    <string name="end_button">END APP</string>
    <string name="about_button">ABOUT</string>
    <string name="my_name">Brett Barnow</string>
</resources>
