<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/r1">

    <Button
        android:id="@+id/endButton"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="184dp"
        android:text="@string/end_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resetButon"
        app:layout_constraintTop_toBottomOf="@+id/strikesCounter" />

    <Button
        android:id="@+id/resetButon"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="184dp"
        android:text="@string/reset_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/endButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strikesButton" />

    <TextView
        android:id="@+id/strikesCounter"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="379dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="left|center_vertical"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/strikesButton"
        app:layout_constraintTop_toBottomOf="@+id/ballsCounter"
        tools:text="@string/strikes_counter" />

    <Button
        android:id="@+id/strikesButton"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="379dp"
        android:text="@string/strikes_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/strikesCounter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ballsButton" />

    <Button
        android:id="@+id/ballsButton"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="169dp"
        android:layout_marginBottom="487dp"
        android:text="@string/balls_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ballsCounter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ballsCounter"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="169dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="487dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="left|center_vertical"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ballsButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/balls_counter" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="107dp"
        android:layout_height="60dp"
        android:layout_marginTop="600dp"
        android:layout_marginBottom="83dp"
        android:text="@string/about_button"
        android:textSize="18sp"
        android:onClick="toAbout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>